<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_bg"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_pencil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_img_btn"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_baseline_create_24"
            android:background="@color/transparent"
            android:contentDescription="@string/btn_pencil" />

        <ImageButton
            android:id="@+id/ib_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_made_24"
            android:padding="@dimen/small_img_btn"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:background="@color/transparent"
            android:contentDescription="@string/btn_arrow" />


        <ImageButton
            android:id="@+id/ib_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_img_btn"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_rectangle_24"
            android:background="@color/transparent"
            android:contentDescription="@string/btn_rectangle" />

        <ImageButton
            android:id="@+id/ib_ellipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_img_btn"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_circle_24"
            android:background="@color/transparent"
            android:contentDescription="@string/btn_ellipse" />

        <ImageButton
            android:id="@+id/ib_color_palette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_img_btn"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_color_palette_24"
            android:background="@color/transparent"
            android:contentDescription="@string/btn_color_palette" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/ll_tools"
        app:layout_constraintTop_toBottomOf="@id/ll_tools"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:background="@drawable/layout_bg"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_color"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_color_square_24"
            android:scaleType="fitXY"
            android:onClick="getSelectedColor"
            android:clickable="true"
            android:background="@color/transparent"
            app:tint="@color/red"
            android:tag="@color/red"
            android:contentDescription="@string/btn_red_color" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_color_square_24"
            android:scaleType="fitXY"
            android:onClick="getSelectedColor"
            android:clickable="true"
            android:background="@color/transparent"
            app:tint="@color/green"
            android:tag="@color/green"
            android:contentDescription="@string/btn_green_color" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_color_square_24"
            android:scaleType="fitXY"
            android:onClick="getSelectedColor"
            android:clickable="true"
            android:background="@color/transparent"
            app:tint="@color/blue"
            android:tag="@color/blue"
            android:contentDescription="@string/btn_blue_color"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_color_square_24"
            android:scaleType="fitXY"
            android:onClick="getSelectedColor"
            android:clickable="true"
            android:background="@color/transparent"
            app:tint="@color/black"
            android:tag="@color/black"
            android:contentDescription="@string/btn_black_color"/>

    </LinearLayout>

    <com.nadafeteiha.drawingapp.DrawingView
        android:id="@+id/drawing_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_color" />

</androidx.constraintlayout.widget.ConstraintLayout>